[package]
name = "still"
version = "0.1.0"
edition = "2021"

[target.'cfg(target_os = "windows")'.dependencies]
ntapi = "0.4.1"
winapi = { version = "0.3.9", features = ["processthreadsapi"] }

[target.'cfg(target_os = "linux")'.dependencies]
daemonize = "0.5.0"
libc = "0.2.169"

[[bin]]
name = "core"
path = "src/core.rs"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
